[tool.poetry]
name = "ulsdk"
version = "0.1.0"
description = "A Python SDK for the UrbanLogiq API"

[tool.poetry.dependencies]
python = ">=3.10, <4"
loguru = "^0.6.0"
pynacl = "1.5.0"
setuptools="^65"
typing-extensions = "4.8.0"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
flake8 = "^6.0.0"
pylint = "^3.2.3"
pyright = "^1.1.339"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = true
reportUntypedClassDecorator = true
pythonVersion = "3.10"
executionEnvironments = [
  { root = "." },
]
