[package]
name = "ulsdk"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
dirs = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_ini = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
